# hc-merklicious

./: CONTRIBUTING.md  Makefile  README.md
docs/: API.md  Use_Cases.md
merklicious_sdk/: Cargo.toml  README.md
merklicious_sdk/src/: lib.rs
prototype/: Makefile  dna.js  entries.js  package-lock.json  package.json  simulation_01.js  testing-merkle-libs.js
prototype/coordinators/: common.js  csr_01.js
tests/: Makefile  package-lock.json  package.json  utils.js
tests/integration/: test_minimal_dna.js  types.js
tests/minimal_dna/: dna.yaml
zomes/: Cargo.toml
zomes/merklicious/: Cargo.toml
zomes/merklicious/src/: lib.rs
zomes/merklicious/src/validation/: create_entry.rs  create_link.rs  delete_entry.rs  delete_link.rs  update_entry.rs
zomes/merklicious_csr/: Cargo.toml
zomes/merklicious_csr/src/: lib.rs
